--- a/public/views/index.html
+++ b/public/views/index.html
@@ -9,5 +9,21 @@
   </head>
   <body ng-app="myApp">
     <h1> Welcome to GymBuddy </h1>
+<form ng-controller="mainController">
+  <div>
+    <label for="username">Username:</label>
+    <input ng-model="username" type="text" name="username" id="username"/>
+  </div>
+  <div>
+    <label for="password">Password:</label>
+    <input ng-model="password" type="password" name="password" id="password"/>
+  </div>
+  <div>
+    <input ng-click="login()" type="submit" value="Log In"/>
+    <a href="/register">Register</a>
+  </div>
+</form>
+</div>
+</div>
   </body>
 </html>
