--- a/public/views/viewWorkout.html
+++ b/public/views/viewWorkout.html
@@ -10,19 +10,9 @@
     <script src="./scripts/client.js" charset="utf-8"></script>
 </head>
 
-<body>
-    <div class="container">
-        <div class="jumbotron">
-            <h1>GymBuddy</h1>
-        </div>
-        <div>
-        <nav>
-          <li>  <a href="/welcome"> Welcome </a> </li>
-          <li>  <a href="/howTo"> How To </a> </li>
-          <li>  <a href="/getStarted"> Get Started </a> </li>
-        </nav>
-      </div>
-    </div>
+<body ng-app="myApp">
+<h1> View Workout</h1>
+
 </body>
 
 </html>
