--- a/public/views/welcome.html
+++ b/public/views/welcome.html
@@ -10,18 +10,12 @@
     <script src="./scripts/client.js" charset="utf-8"></script>
 </head>
 
-<body>
+<body ng-app="myApp">
     <div class="container">
         <div class="jumbotron">
             <h1>GymBuddy</h1>
         </div>
-        <div>
-        <nav>
-          <li>  <a href="/welcome"> Welcome </a> </li>
-          <li>  <a href="/howTo"> How To </a> </li>
-          <li>  <a href="/getStarted"> Get Started </a> </li>
-        </nav>
-      </div>
+        <h1> Welcome Page</h1>
     </div>
 </body>
 
