--- a/public/views/index.html
+++ b/public/views/index.html
@@ -1,29 +1,36 @@
 <!DOCTYPE html>
 <html>
-  <head>
+
+<head>
     <meta charset="utf-8">
-    <title>GymBuddy</title>
+    <title>GymBuddy - Workout Planning Made Easy</title>
+    <link href="./vendors/bootstrap.min.css"rel="stylesheet">
+    <link href="./style/style.css" rel="stylesheet">
     <script src="./vendors/angular.min.js" charset="utf-8"></script>
     <script src="./scripts/client.js" charset="utf-8"></script>
-    <script src="./style/style.css" charset="utf-8"></script>
-  </head>
-  <body ng-app="myApp">
-    <h1> Welcome to GymBuddy </h1>
-<form ng-controller="mainController">
-  <div>
-    <label for="username">Username:</label>
-    <input ng-model="username" type="text" name="username" id="username"/>
+</head>
+<body ng-app="myApp">
+  <div class="container">
+    <div class="jumbotron">
+    <h1>GymBuddy</h1>
   </div>
-  <div>
-    <label for="password">Password:</label>
-    <input ng-model="password" type="password" name="password" id="password"/>
-  </div>
-  <div>
-    <input ng-click="login()" type="submit" value="Log In"/>
-    <a href="/register">Register</a>
-  </div>
-</form>
-</div>
-</div>
-  </body>
+    <form ng-controller="mainController">
+        <div>
+            <label for="username">Username:</label>
+            <input ng-model="username" type="text" name="username" id="username" placeholder="username"/>
+        </div>
+        <div>
+            <label for="password">Password:</label>
+            <input ng-model="password" type="password" name="password" id="password" placeholder="password"/>
+        </div>
+        <div>
+            <input ng-click="login()" type="submit" value="Log In" />
+            <a href="/register">Register</a>
+        </div>
+      </div>
+    </form>
+    </div>
+    </div>
+</body>
+
 </html>
