added more pages to views

--- a/public/views/createNewWorkout.html
+++ b/public/views/createNewWorkout.html
@@ -11,7 +11,17 @@
 </head>
 
 <body ng-app="myApp">
-<h1> View Workout</h1>
+<h1> Create New Workout</h1>
+<form>
+  Name: <input type="text" name="name">
+  <br>
+  Description: <textarea name="description"> </textarea>
+  <br>
+  Enter ImageUrl<input type="text" name="" value="">
+  <br>
+  <button type="button" name="button"> Submit </button>
+</form>
+
 
 </body>
 
