--- a/public/views/searchAPI.html
+++ b/public/views/searchAPI.html
@@ -18,9 +18,10 @@
      <input type="text" name="" value="" placeholder="Search Exercise" ng-model="searchExercise">
     <button type="button" name="button" ng-click="searchExerciseFunc()">Search</button>
   </div>
-  <div ng-repeat= "exercise in exercises">
+  <div ng-repeat= "exercise in exercises|filter:searchExercise">
   <div> Exercise Name: {{exercise.name}} </div>
   <div> Exercise Description: {{exercise.description}} </div>
+</div>
 </body>
 
 </html>
