--- a/public/views/searchAPI.html
+++ b/public/views/searchAPI.html
@@ -21,6 +21,7 @@
   <div ng-repeat= "exercise in exercises|filter:searchExercise">
   <div> Exercise Name: {{exercise.name}} </div>
   <div> Exercise Description: {{exercise.description}} </div>
+  <button type="button" name="button" ng-click="addtoWorkout()"> Add to workout</button>
 </div>
 </body>
 
