--- a/public/views/createNewWorkout.html
+++ b/public/views/createNewWorkout.html
@@ -20,7 +20,7 @@
             <br>
             <button type="button" name="button" ng-click="addWorkoutFunc()"> Submit </button>
             <br>
-            <button type="button" name="button" ng-click="go('/getStarted')">Get Started</button>
+            <!-- <button type="button" name="button" ng-click="go('/getStarted')">Get Started</button> -->
         </form>
           </div>
 
