Add/Create/View Workout and Add/Create/View Exercise Completed

--- a/public/views/createNewExercise.html
+++ b/public/views/createNewExercise.html
@@ -36,6 +36,7 @@
           Image: <img ng-src="{{exercise.imageUrl}}">
           <br>
           <button type="button" name="button" ng-click="addtoWorkout()"> Add to workout</button>
+          <!-- select workout should add particular exercise to selected workout -->
       </div>
     </div>
 
