--- a/public/views/createNewWorkout.html
+++ b/public/views/createNewWorkout.html
@@ -32,6 +32,11 @@
         Description: {{workout.description}}
         <br>
         Image: <img ng-src="{{workout.imageUrl}}">
+        <button type="button" name="button" ng-click="selectWorkoutFunc()">Select</button>
+        <!-- select workout should add particular workout to workouts -->
+                                  <!-- or -->
+        <!-- select workout should change page to workout view -->
+
     </div>
   </div>
 
