--- a/public/views/createNewExercise.html
+++ b/public/views/createNewExercise.html
@@ -11,37 +11,26 @@
     <script src="./scripts/client.js" charset="utf-8"></script>
 </head>
 
-<body>
-  <body ng-app="myApp">
-      <div ng-controller="createExerciseController">
-          <h1> Create New Exercise </h1>
-          <form>
-              Name: <input type="text" name="name" ng-model="name">
-              <br> Description: <textarea name="description" ng-model="description"> </textarea>
-              <br> Enter ImageUrl: <input type="text" name="" value="" ng-model="imageUrl">
-              <br>
-              <button type="button" name="button" ng-click="addExerciseFunc()"> Submit </button>
-              <br>
-              <!-- <button type="button" name="button" ng-click="go('/getStarted')">Get Started</button> -->
-          </form>
-            </div>
+<body ng-app="myApp">
+    <div class="container">
+        <div class="jumbotron">
+            <h1>GymBuddy</h1>
+        </div>
+        <div ng-controller="createExerciseController">
+            <h1> Create New Exercise </h1>
+            <form>
+                Name: <input type="text" name="name" ng-model="name">
+                <br> Description: <textarea name="description" ng-model="description"> </textarea>
+                <br> Enter ImageUrl: <input type="text" name="" value="" ng-model="imageUrl">
+                <br>
+                <button type="button" name="button" ng-click="addExerciseFunc()"> Submit </button>
+                <br>
+                <button type="button" name="button" ng-click="home()"> Home </button>
+                <br>
+                <!-- <button type="button" name="button" ng-click="go('/getStarted')">Get Started</button> -->
+            </form>
+        </div>
 
-        <div ng-controller="viewExerciseController">
-            <button type="button" name="button" ng-click="viewExerciseFunc()">View Existing Exercises</button>
-      <div ng-repeat='exercise in exercises'>
-          Name: {{exercise.name}}
-          <br>
-          Description: {{exercise.description}}
-          <br>
-          Image: <img ng-src="{{exercise.imageUrl}}">
-          <br>
-          <button type="button" name="button" ng-click="addtoWorkout()"> Add to workout</button>
-          <!-- select workout should add particular exercise to selected workout -->
-      </div>
-    </div>
-
-  </body>
-  </html>
 </body>
 
 </html>
