--- a/public/views/createNewWorkout.html
+++ b/public/views/createNewWorkout.html
@@ -11,34 +11,40 @@
 </head>
 
 <body ng-app="myApp">
-    <div ng-controller="createWorkoutController">
-        <h1> Create New Workout</h1>
-        <form>
-            Name: <input type="text" name="name" ng-model="name">
-            <br> Description: <textarea name="description" ng-model="description"> </textarea>
-            <br> Enter ImageUrl: <input type="text" name="" value="" ng-model="imageUrl">
-            <br>
-            <button type="button" name="button" ng-click="addWorkoutFunc()"> Submit </button>
-            <br>
-            <!-- <button type="button" name="button" ng-click="go('/getStarted')">Get Started</button> -->
-        </form>
-          </div>
+    <div class="container">
+        <div class="jumbotron">
+            <h1>GymBuddy</h1>
+        </div>
 
-      <div ng-controller="viewWorkoutController">
-          <button type="button" name="button" ng-click="viewWorkoutFunc()">View Existing Workouts</button>
-    <div ng-repeat='workout in workouts'>
-        Name: {{workout.name}}
-        <br>
-        Description: {{workout.description}}
-        <br>
-        Image: <img ng-src="{{workout.imageUrl}}">
-        <button type="button" name="button" ng-click="selectWorkoutFunc()">Select</button>
-        <!-- select workout should add particular workout to workouts -->
-                                  <!-- or -->
-        <!-- select workout should change page to workout view -->
+        <div ng-controller="createWorkoutController">
+            <h1> Create New Workout</h1>
+            <form>
+                Name: <input type="text" name="name" ng-model="name">
+                <br> Description: <textarea name="description" ng-model="description"> </textarea>
+                <br> Enter ImageUrl: <input type="text" name="" value="" ng-model="imageUrl">
+                <br>
+                <button type="button" name="button" ng-click="addWorkoutFunc()"> Submit </button>
+                <br>
+                <button type="button" name="button" ng-click="home()">Home</button>
+            </form>
+        </div>
 
+
+        <div ng-controller="viewWorkoutController">
+            <button type="button" name="button" ng-click="viewWorkoutFunc()">View Existing Workouts</button>
+            <div ng-repeat='workout in workouts'>
+                Name: {{workout.name}}
+                <br> Description: {{workout.description}}
+                <br> Image: <img ng-src="{{workout.imageUrl}}">
+                <br>
+                <button type="button" name="button" ng-click="selectWorkoutFunc()" ng-model="selectWorkout">Select</button>
+                <!-- select workout should add particular workout to workouts -->
+                <!-- or -->
+                <!-- select workout should change page to workout view -->
+
+            </div>
+        </div>
     </div>
-  </div>
-
 </body>
+
 </html>
