--- a/public/views/searchAPI.html
+++ b/public/views/searchAPI.html
@@ -10,19 +10,22 @@
     <script src="./scripts/client.js" charset="utf-8"></script>
 </head>
 
-<body ng-app="myApp" ng-controller="exerciseController">
+<body ng-app="myApp" ng-controller="searchExerciseController">
     <div class="container">
         <div class="jumbotron">
             <h1>GymBuddy</h1>
         </div>
-     <input type="text" name="" value="" placeholder="Search Exercise" ng-model="searchExercise">
-    <button type="button" name="button" ng-click="searchExerciseFunc()">Search</button>
-  </div>
-  <div ng-repeat= "exercise in exercises|filter:searchExercise">
-  <div> Exercise Name: {{exercise.name}} </div>
-  <div> Exercise Description: {{exercise.description}} </div>
-  <button type="button" name="button" ng-click="addtoWorkout()"> Add to workout</button>
-</div>
+        <input type="text" name="" value="" placeholder="Search Exercise" ng-model="searchExercise">
+        <button type="button" name="button" ng-click="searchExerciseFunc()">Search</button>
+
+        <div ng-repeat="exercise in exercises|filter:searchExercise">
+            <div> Exercise Name: {{exercise.name}} </div>
+            <div> Exercise Description: {{exercise.description}} </div>
+            <button type="button" name="button" ng-click="addtoWorkout()"> Add to workout</button>
+        </div>
+        <br>
+        <button type="button" name="button" ng-click="home()"> Home </button>
+    </div>
 </body>
 
 </html>
