--- a/public/views/viewExercise.html
+++ b/public/views/viewExercise.html
@@ -16,7 +16,7 @@
             <h1>GymBuddy</h1>
         </div>
         <div ng-controller="viewExerciseController">
-            <button type="button" name="button" ng-click="viewExerciseFunc()">View Existing Exercises</button>
+            <button type="button" name="button" ng-click="viewExerciseFunc()">View Exercises</button>
             <div ng-repeat='exercise in exercises'>
                 Name: {{exercise.name}}
                 <br> Description: {{exercise.description}}
