turned radio buttons into buttons

--- a/public/views/register.html
+++ b/public/views/register.html
@@ -27,6 +27,7 @@
             </div>
             <div>
                 <input ng-click="register()" type="submit" value="Register" />
+                <input ng-click="cancel()" type="submit" value="Cancel" />
             </div>
         </form>
     </div>
