--- a/public/views/createNewExercise.html
+++ b/public/views/createNewExercise.html
@@ -17,7 +17,7 @@
             <h1>GymBuddy</h1>
         </div>
         <div ng-controller="createExerciseController">
-            <h1> Create New Exercise </h1>
+            <h1> New Exercise </h1>
             <form>
                 Name: <input type="text" name="name" ng-model="name">
                 <br> Description: <textarea name="description" ng-model="description"> </textarea>
