--- a/public/views/createNewWorkout.html
+++ b/public/views/createNewWorkout.html
@@ -17,11 +17,11 @@
         </div>
 
         <div ng-controller="createWorkoutController">
-            <h1> Create New Workout</h1>
+            <h1> New Workout</h1>
             <form>
-                Name: <input type="text" name="name" ng-model="name">
+                Workout Name: <input type="text" name="name" ng-model="name">
                 <br> Description: <textarea name="description" ng-model="description"> </textarea>
-                <br> Enter ImageUrl: <input type="text" name="" value="" ng-model="imageUrl">
+                <br>  Image URL: <input type="text" name="" value="" ng-model="imageUrl">
                 <br>
                 <button type="button" name="button" ng-click="addWorkout()"> Submit </button>
                 <br>
