--- a/public/views/getStarted.html
+++ b/public/views/getStarted.html
@@ -16,38 +16,57 @@
             <h1>GymBuddy</h1>
         </div>
         <div ng-controller="getStartedController">
-            <form name="getStarted">
-                <label>
-            <input type="radio" name="workout" value="createWorkout" ng-model="getStarted">
-            Create Workout
-          </label>
-                <br>
-                <label>
-            <input type="radio" name="workout" value="viewWorkout" ng-model="getStarted">
-            View Workout
-          </label>
-                <br>
-                <label>
-            <input type="radio" name="workout" value="createExercise"ng-model="getStarted">
-          Create Exercise
-          </label>
-                <br>
-                <label>
-            <input type="radio" name="workout" value="viewExercise" ng-model="getStarted">
-            View Exercise
-          </label>
-                <br>
-                <label>
-      <input type="radio" name="workout" value="searchForExercise" ng-model="getStarted">
-      Search For Exercise
-    </label>
-                <!-- <label>
-              <input type="radio" name="workout" value="editExistingCustomExercise" ng-model="getStarted">
-            Edit Existing Custom Exercise
-          </label> -->
-            </form>
-            <button type="button" name="button" ng-click="submit()"> Submit </button>
-        </div>
+          <input type="button" name="createWorkout" value="Create Workout" ng-model="createWorkout"  ng-click="createWorkout()">
+              <br>
+          <input type="button" name="viewWorkout"value="View Workout" ng-model="getStarted"  ng-click="viewWorkout()">
+                  <br>
+
+          <input type="button" name="createExercise"value="Create Exercise"ng-model="createExercise" ng-click="createExercise()">
+
+              <br>
+
+          <input type="button" name="viewExercise" value="View Exercise" ng-model="viewExercise" ng-click="viewExercise()">
+
+              <br>
+
+    <input type="button" name="searchForExercise"value="Search For Exercise" ng-model="searchForExercise"  ng-click="searchForExercise()">
+
+
+
+              <!-- <form name="getStarted">
+                  <label>
+              <input type="radio" name="workout" value="createWorkout" ng-model="getStarted">
+              Create Workout
+            </label>
+                  <br>
+                  <label>
+              <input type="radio" name="workout" value="viewWorkout" ng-model="getStarted">
+              View Workout
+            </label>
+                  <br>
+                  <label>
+              <input type="radio" name="workout" value="createExercise"ng-model="getStarted">
+            Create Exercise
+            </label>
+                  <br>
+                  <label>
+              <input type="radio" name="workout" value="viewExercise" ng-model="getStarted">
+              View Exercise
+            </label>
+                  <br>
+                  <label>
+        <input type="radio" name="workout" value="searchForExercise" ng-model="getStarted">
+        Search For Exercise
+      </label>
+                  <label>
+                <input type="radio" name="workout" value="editExistingCustomExercise" ng-model="getStarted">
+              Edit Existing Custom Exercise
+            </label>
+              </form>
+              <button type="button" name="button" ng-click="submit()"> Submit </button>
+              <br>
+              <button type="button" name="button" ng-click="logout()"> Log Out</button>
+          </div> -->
 
 </body>
 
