--- a/public/views/viewWorkout.html
+++ b/public/views/viewWorkout.html
@@ -32,7 +32,9 @@
                 Name: {{workout.name}}
                 <br> Description: {{workout.description}}
                 <br> Image: <img ng-src="{{workout.imageUrl}}">
-                <button type="button" name="button" ng-click="setActive($index)">Select</button>
+                <button type="button" name="button" ng-click="selectWorkoutFunc()">Select</button>
+                <!-- <button type="button" name="button" ng-click="$scope.workoutClick">Select</button> -->
+                <!-- <button type="button" name="button" ng-click="setActive($index)">Select</button> -->
             </div>
           <button type="button" name="button" ng-click="home()"> Home </button>
         </div>
