--- a/public/views/index.html
+++ b/public/views/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <meta charset="utf-8">
+    <meta name="viewport" content="width=360, initial-scale=1, maximum-scale=1">
     <title>GymBuddy - Workout Planning Made Easy</title>
     <link href="./vendors/bootstrap.min.css" rel="stylesheet">
     <link href="./style/login.css" rel="stylesheet">
@@ -27,7 +27,7 @@
             </div>
             <div>
                 <input ng-click="login()" type="submit" value="Log In" class="btn btn-lg btn-primary btn-block" />
-                <a href="/register">Register</a>
+                <a href="/register">Don't have an account? Click here</a>
             </div>
     </div>
     </form>
