--- a/public/views/register.html
+++ b/public/views/register.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <meta charset="utf-8">
+    <meta name="viewport" content="width=360, initial-scale=1, maximum-scale=1">
     <title>GymBuddy - Workout Planning Made Easy</title>
     <link href="./vendors/bootstrap.min.css" rel="stylesheet">
     <link href="./style/login.css" rel="stylesheet">
