--- a/public/views/viewExercise.html
+++ b/public/views/viewExercise.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <meta charset="utf-8">
+    <meta name="viewport" content="width=360, initial-scale=1, maximum-scale=1">
     <title>GymBuddy - Workout Planning Made Easy</title>
     <link href="./vendors/bootstrap.min.css" rel="stylesheet">
     <link href="./style/style.css" rel="stylesheet">
@@ -16,15 +16,16 @@
             <h1>GymBuddy</h1>
         </div>
         <div ng-controller="viewExerciseController">
-            <button type="button" name="button" ng-click="viewExerciseFunc()">View Exercises</button>
+          <h1>View Exercise XYZ </h1>
+            <!-- <button type="button" name="button" ng-click="viewExerciseFunc()">View Exercises</button>
             <div ng-repeat='exercise in exercises'>
                 Name: {{exercise.name}}
                 <br> Description: {{exercise.description}}
                 <br> Image: <img ng-src="{{exercise.imageUrl}}">
-                <br>
+                <br> -->
                 <!-- <button type="button" name="button" ng-click="addtoWorkout()"> Add to workout</button> -->
                 <!-- select workout should add particular exercise to selected workout -->
-            </div>
+            <!-- </div> -->
             <button type="button" name="button" ng-click="home()"> Home </button>
         </div>
     </div>
