--- a/public/views/createNewExercise.html
+++ b/public/views/createNewExercise.html
@@ -23,7 +23,7 @@
                 <br> Description: <textarea name="description" ng-model="description"> </textarea>
                 <br> Enter ImageUrl: <input type="text" name="" value="" ng-model="imageUrl">
                 <br>
-                <button type="button" name="button" ng-click="addExerciseFunc()"> Submit </button>
+                <button type="button" name="button" ng-click="addExercise()"> Submit </button>
                 <br>
                 <button type="button" name="button" ng-click="home()"> Home </button>
                 <br>
