--- a/public/views/searchAPI.html
+++ b/public/views/searchAPI.html
@@ -10,7 +10,8 @@
     <script src="./scripts/client.js" charset="utf-8"></script>
 </head>
 
-<body ng-app="myApp" ng-controller="searchExerciseController">
+<body ng-app="myApp">
+<div ng-controller="searchExerciseController">
     <div class="container">
         <div class="jumbotron">
             <h1>GymBuddy</h1>
@@ -26,6 +27,6 @@
         <br>
         <button type="button" name="button" ng-click="home()"> Home </button>
     </div>
+  </div>
 </body>
-
 </html>
