--- a/public/views/viewExercise.html
+++ b/public/views/viewExercise.html
@@ -11,24 +11,17 @@
 </head>
 
 <body ng-app="myApp">
+    <div ng-controller="viewExerciseController">
     <div class="container">
         <div class="jumbotron">
             <h1>GymBuddy</h1>
         </div>
-        <div ng-controller="viewExerciseController">
+          <div>
           <h1>View Exercise XYZ </h1>
-            <!-- <button type="button" name="button" ng-click="viewExerciseFunc()">View Exercises</button>
-            <div ng-repeat='exercise in exercises'>
-                Name: {{exercise.name}}
-                <br> Description: {{exercise.description}}
-                <br> Image: <img ng-src="{{exercise.imageUrl}}">
-                <br> -->
-                <!-- <button type="button" name="button" ng-click="addtoWorkout()"> Add to workout</button> -->
-                <!-- select workout should add particular exercise to selected workout -->
-            <!-- </div> -->
             <button type="button" name="button" ng-click="home()"> Home </button>
         </div>
     </div>
+  </div>
 </body>
 
 </html>
