--- a/public/views/viewWorkout.html
+++ b/public/views/viewWorkout.html
@@ -14,7 +14,7 @@
 </head>
 
 <body ng-app="myApp">
-    <div ng-controller="viewWorkoutController">
+    <div ng-controller="viewWorkoutController" ng-init="selectedWorkout()">
     <div class="container">
         <div class="jumbotron">
             <h1>GymBuddy</h1>
@@ -23,9 +23,6 @@
             <script src="/node_modules/angular-aria/angular-aria.js"></script>
             <script src="/node_modules/angular-animate/angular-animate.js"></script>
             <script src="/node_modules/angular-material/angular-material.js"></script> -->
-            <h1> View Workout XYZ </h1>
-            <p> Workout Image </p>
-            <p> This page should display the specific workout that was selected in a tab that would enable user to select day view and exercise for day </p>
             <!-- clicking select  under workout would bring you to this page -->
             <!-- on this page would be be the specific workout -->
             <!-- example workout X -->
@@ -36,6 +33,12 @@
             <!-- button to add exercise to workout -->
             <!-- (get selected workout from button clicked on previous page) -->
             <!-- (how to on page load, load existing workouts without needing to click view) -->
+            <h1> View Workout XYZ </h1>
+            <p> Workout Image </p>
+            <p> This page should display the specific workout that was selected in
+              a tab that would enable user to select day view and exercise for day using "selected
+              workout id:" </p>
+
             <button type="button" name="button" ng-click="home()"> Home </button>
         </div>
     </div>
